--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -40,7 +40,9 @@
     "\n",
     "This is the place to start. This module introduces you to Ray, why it was created, what problems it solves, how to use it, and how it works behind the scenes.\n",
     "\n",
-    "Once you've completed the Ray core material, you can explore the rest of the modules in any order."
+    "Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
+    "\n",
+    "Start in [this notebook](ray-core/01-Introduction.ipynb)."
    ]
   },
   {
@@ -51,7 +53,9 @@
     "\n",
     "Directory: `ray-rllib`\n",
     "\n",
-    "_Ray RLlib_ is Ray's system for _reinforcement learning_. This module begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications."
+    "_Ray RLlib_ is Ray's system for _reinforcement learning_. This module begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
+    "\n",
+    "This module will be released soon."
    ]
   },
   {
@@ -62,7 +66,9 @@
     "\n",
     "Directory: `ray-tune`\n",
     "\n",
-    "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This module starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the module explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_. The new _Ray SGD_ module is also covered."
+    "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This module starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the module explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_. The new _Ray SGD_ module is also covered.\n",
+    "\n",
+    "This module will be released soon."
    ]
   },
   {
@@ -73,7 +79,9 @@
     "\n",
     "Directory: `ray-serve`\n",
     "\n",
-    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This module starts with an explanation of what's required in model serving, followed by a tour of the API with examples."
+    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This module starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
+    "\n",
+    "This module will be released soon."
    ]
   },
   {
