Finished the third lesson

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "> **Note:** If two or more notebooks have the same `NN` number, it indicates they can be studied an arbitrary order.\n",
     "\n",
-    "Let's discuss the modules. in this project, organized in subdirectories."
+    "Let's discuss the modules in this tutorial, which are organized in subdirectories."
    ]
   },
   {
@@ -42,7 +42,14 @@
     "\n",
     "Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
     "\n",
-    "Start in [this notebook](ray-core/01-Introduction.ipynb)."
+    "| Lesson | Description |\n",
+    "| :----- | :---------- |\n",
+    "| [01 Introduction](ray-core/01-Introduction.ipynb) | Start in this notebook, which introduces Ray. |\n",
+    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| [05 Putting It Together](ray-core/05-PuttingItTogether.ipynb) | To cement our knowlege of Ray, this lesson is an extended exercise where you'll learn how to find performance bottlenecks in a Python application and fix them with Ray. |\n",
+    "| [06 Other Ray API Calls](ray-core/06-OtherRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. |"
    ]
   },
   {
