--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,19 +35,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-06 13:44:01,589\tINFO resource_spec.py:204 -- Starting Ray with 4.0 GiB memory available for workers and up to 2.02 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-06 13:44:01,947\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8267\u001b[39m\u001b[22m\n"
+      "2020-04-07 08:02:48,921\tINFO resource_spec.py:204 -- Starting Ray with 4.44 GiB memory available for workers and up to 2.23 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-07 08:02:49,274\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:15803',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-06_13-44-01_581721_30006/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-06_13-44-01_581721_30006/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8267',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-06_13-44-01_581721_30006'}"
+       " 'redis_address': '192.168.1.149:26771',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-07_08-02-48_912726_63557/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-07_08-02-48_912726_63557/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8266',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-07_08-02-48_912726_63557'}"
       ]
      },
      "execution_count": 2,
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1 in 02-DataParallelism-Part1\n",
+    "## Exercise 1 in 02-TaskParallelism-Part1\n",
     "\n",
     "You were asked to convert the regular Python code to Ray code. Here are the three cells appropriately modified.\n",
     "\n",
@@ -109,14 +109,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2 in 03-DataParallelism-Part2\n",
+    "## Exercise 2 in 03-TaskParallelism-Part2\n",
     "\n",
-    "You were asked to use `ray.wait()` with a shorter timeout, `2.5` seconds. First we need to define the remote functions we used in that lesson:"
+    "You were asked to use `ray.wait()` with a shorter timeout, `2.5` seconds. First we need to redefine in this notebook the remote functions we used in that lesson:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,41 +133,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Returned   1 completed tasks. (elapsed time:  1.012)\n",
+      "Returned   2 completed tasks. (elapsed time:  2.021)\n",
       "0: []\n",
-      "Returned   1 completed tasks. (elapsed time:  2.022)\n",
-      "10: [-0.20901075 -0.72949182 -0.28642699  0.22743713  3.95596187 -0.88017923\n",
-      " -3.34731201  0.43302113 -0.47698767  1.78129132]\n",
-      "Returned   0 completed tasks. (elapsed time:  3.032)\n",
-      "Returned   1 completed tasks. (elapsed time:  4.033)\n",
-      "20: [-1.13928061 -3.50407667  2.38028826  0.32258259 -1.96872189 -2.06495504\n",
-      " -0.47164318  2.3409099   0.21522455  5.64403487  0.57652634  0.92022058\n",
-      " -0.20882429 -0.2094916  -1.90197131  0.90725176 -0.42482058 -1.60838073\n",
-      "  0.65295721 -1.30397866]\n",
-      "Returned   0 completed tasks. (elapsed time:  5.040)\n",
-      "Returned   1 completed tasks. (elapsed time:  6.049)\n",
-      "30: [ 0.27803524  0.83967401  1.09990838  2.63662949 -1.36933238 -2.82048063\n",
-      " -0.93562439  1.90033255 -1.80210399  1.17175202  1.41702166  3.68647442\n",
-      " -2.11658026 -1.67363274 -1.78038492  0.80202995 -0.56110565 -1.10746302\n",
-      "  1.36555112 -0.6232434   0.77354945  2.06223836 -0.70719446 -2.05362656\n",
-      " -1.56919975 -0.64422823 -1.52226542 -1.30711116  1.50821394 -1.06891335]\n",
-      "Returned   0 completed tasks. (elapsed time:  7.062)\n",
-      "Returned   1 completed tasks. (elapsed time:  8.011)\n",
-      "40: [-1.13931407 -0.61930356  2.94453851 -3.32743643  1.01186768  0.69512987\n",
-      " -0.70840862 -3.61589447 -0.81552803  0.34956039 -2.23455211  1.39921717\n",
-      "  2.33992097  0.10896049 -0.10138495  0.91080548  2.54458809  0.55216405\n",
-      "  1.24825157 -1.3930282   2.91585766  1.26876743  1.77956411  4.00307008\n",
-      " -0.05418614  0.3666216   0.15050281  2.05333636  0.84009748 -3.14502523\n",
-      "  2.39147394  0.83527633  1.81003295  1.46379255 -0.91892098 -0.37286608\n",
-      " -0.50235809  2.10035498 -5.54424982 -2.02347905]\n",
-      "Total time: duration:  8.013 seconds\n"
+      "10: [ 3.95318532  1.95703209 -1.77142106  0.48401556 -3.66004368  1.65002282\n",
+      "  3.51581126 -0.62342501 -1.43977852 -0.19810529]\n",
+      "Returned   1 completed tasks. (elapsed time:  5.533)\n",
+      "20: [ 1.38744086 -1.84890282  1.76892294  0.88618333 -0.45441002 -0.74875324\n",
+      " -0.68359449  1.35974112 -2.72374048 -1.6864953   0.17671172  1.99400488\n",
+      "  1.53733697 -1.47867413 -0.51142734 -2.19978562 -3.49982821  1.07790542\n",
+      " -0.38826834  1.69827754]\n",
+      "Returned   2 completed tasks. (elapsed time:  8.014)\n",
+      "30: [ 1.13530849 -4.07447539  0.30959073  1.30257747  0.95060131 -3.05474103\n",
+      "  2.05413706  3.70526873 -1.9819779   0.52198044 -2.42485218  2.79255394\n",
+      "  0.244146    4.65404811  2.62351162  1.31775663  3.4565208   2.13435246\n",
+      "  2.05918341 -0.40861993 -1.87624159 -0.52302686 -0.45058515  0.73924722\n",
+      "  1.04711594 -0.14052396  2.60024071 -0.51780442 -5.92163164 -0.94569481]\n",
+      "40: [ 0.75586819 -0.23227869 -1.09352479 -0.63175279  1.81580443  1.00967837\n",
+      "  2.73164613 -0.76729172  0.15852797 -0.63161731  3.11799318 -0.82320063\n",
+      " -3.47297453 -4.08071441  4.41191857  1.94677487  2.12247008  2.33309615\n",
+      "  2.18488046 -0.99478113 -0.49590528  1.68252378  1.86507192 -2.36593973\n",
+      " -1.61082161 -2.17791427  1.6361454  -3.4963533   0.49183329  2.65500718\n",
+      "  0.67533248 -0.18600865  3.15706281 -0.41840903  1.57932327  0.50417131\n",
+      "  1.58439188  1.10238143  2.30020779 -0.87461155]\n",
+      "\n",
+      "all arrays: [array([], dtype=float64), array([ 3.95318532,  1.95703209, -1.77142106,  0.48401556, -3.66004368,\n",
+      "        1.65002282,  3.51581126, -0.62342501, -1.43977852, -0.19810529]), array([ 1.38744086, -1.84890282,  1.76892294,  0.88618333, -0.45441002,\n",
+      "       -0.74875324, -0.68359449,  1.35974112, -2.72374048, -1.6864953 ,\n",
+      "        0.17671172,  1.99400488,  1.53733697, -1.47867413, -0.51142734,\n",
+      "       -2.19978562, -3.49982821,  1.07790542, -0.38826834,  1.69827754]), array([ 1.13530849, -4.07447539,  0.30959073,  1.30257747,  0.95060131,\n",
+      "       -3.05474103,  2.05413706,  3.70526873, -1.9819779 ,  0.52198044,\n",
+      "       -2.42485218,  2.79255394,  0.244146  ,  4.65404811,  2.62351162,\n",
+      "        1.31775663,  3.4565208 ,  2.13435246,  2.05918341, -0.40861993,\n",
+      "       -1.87624159, -0.52302686, -0.45058515,  0.73924722,  1.04711594,\n",
+      "       -0.14052396,  2.60024071, -0.51780442, -5.92163164, -0.94569481]), array([ 0.75586819, -0.23227869, -1.09352479, -0.63175279,  1.81580443,\n",
+      "        1.00967837,  2.73164613, -0.76729172,  0.15852797, -0.63161731,\n",
+      "        3.11799318, -0.82320063, -3.47297453, -4.08071441,  4.41191857,\n",
+      "        1.94677487,  2.12247008,  2.33309615,  2.18488046, -0.99478113,\n",
+      "       -0.49590528,  1.68252378,  1.86507192, -2.36593973, -1.61082161,\n",
+      "       -2.17791427,  1.6361454 , -3.4963533 ,  0.49183329,  2.65500718,\n",
+      "        0.67533248, -0.18600865,  3.15706281, -0.41840903,  1.57932327,\n",
+      "        0.50417131,  1.58439188,  1.10238143,  2.30020779, -0.87461155])]\n",
+      "Total time: duration:  8.020 seconds\n"
      ]
     }
    ],
@@ -176,20 +189,23 @@
     "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
     "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
     "\n",
+    "arrays = []\n",
     "waiting_ids = list(added_array_ids)        # Assign a working list to the full list of ids\n",
     "while len(waiting_ids) > 0:                # Loop until all tasks have completed\n",
     "    # Call ray.wait with:\n",
     "    #   1. the list of ids we're still waiting to complete,\n",
     "    #   2. tell it to return immediately as soon as TWO of them complete,\n",
     "    #   3. tell it wait up to 10 seconds before timing out.\n",
-    "    return_n = 2 if len(waiting_ids) >= 2 else 1   # See discussion in the next cell\n",
-    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=return_n, timeout=0.5)\n",
+    "    return_n = 2 if len(waiting_ids) > 1 else 1\n",
+    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=return_n, timeout=2.5)\n",
     "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_ids), time.time() - start))\n",
-    "    for array in ray.get(ready_ids):\n",
+    "    new_arrays = ray.get(ready_ids)\n",
+    "    arrays.extend(new_arrays)\n",
+    "    for array in new_arrays:\n",
     "        print(f'{array.size}: {array}')\n",
-    "        \n",
     "    waiting_ids = remaining_ids  # Reset this list; don't include the completed ids in the list again!\n",
     "    \n",
+    "print(f\"\\nall arrays: {arrays}\")\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
    ]
   },
@@ -200,15 +216,48 @@
     "For a timeout of `2.5` seconds, the second call to `ray.wait()` times out before two tasks finish, so it only returns one completed task. Why did the third and last iteration not time out? (That is, they both successfully returned two items.) It's because all the tasks were running in parallel so they had time to finish. If you use a shorter timeout, you'll see more time outs, where zero or one items are returned. \n",
     "\n",
     "Try `1.5` seconds, where all but one iteration times out and returns one item. The first iteration returns two items.\n",
-    "Try `0.5` seconds, where you'll get several iterations that time out and return zero items, while the all the other iterations time out and returns one item."
+    "Try `0.5` seconds, where you'll get several iterations that time out and return zero items, while all the other iterations time out and return one item."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 in 03-TaskParallelism-Part2\n",
+    "\n",
+    "You were asked to convert the code to use Ray, especially `ray.wait()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@ray.remote\n",
+    "def slow_square(n):\n",
+    "    time.sleep(n)\n",
+    "    return n*n\n",
+    "\n",
+    "start = time.time()\n",
+    "ids = [slow_square.remote(n) for n in range(4)]\n",
+    "squares = []\n",
+    "waiting_ids = ids\n",
+    "while len(waiting_ids) > 0:\n",
+    "    finished_ids, waiting_ids = ray.wait(waiting_ids)  # We just assign the second list to waiting_ids...\n",
+    "    squares.extend(ray.get(finished_ids))\n",
+    "duration = time.time() - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert squares == [0, 1, 4, 9]\n",
+    "assert duration < 4.1, f'duration = {duration}' "
+   ]
   }
  ],
  "metadata": {
