First draft for merging to master

--- a/ray-core/01-Introduction.ipynb
+++ b/ray-core/01-Introduction.ipynb
@@ -13,6 +13,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Why Do We Need Ray?\n",
+    "\n",
+    "Consider the following charts:\n",
+    "![Two Trends](../images/TwoTrends.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ML/AI model sizes have grown enormously in recent years, roughly 35x every 18 months, which is considerably faster than Moore's Law! Hence, this growth is far outstripping the growth of hardware capabilities. The only way to meet the need for sufficient compute power is to go distributed, as [Ion Stoica recently wrote](https://anyscale.com/blog/the-future-of-computing-is-distributed/).\n",
+    "\n",
+    "At the same time, the use of Python is growing rapidly, because it is a very popular language for data science. Many of the ML/AI toolkits are Python-based. Hence, there is a pressing need for powerful, yet easy-to-use tools for scaling Python applications horizontally. This is the motivation for Ray."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why are tools needed? First, the Python interpreter itself is not designed for massive scalability and high performance. Many python libraries with these requirements use C/C++ backends to work around Python limitations, like the so-called _global interpreter lock_, which effectively makes Python scripts single threaded. \n",
+    "\n",
+    "Some of the most popular, general-purpose tools for this purpose include the following:\n",
+    "* [asyncio](https://docs.python.org/3/library/asyncio.html) for _async/await_-style (coroutine) concurrency.\n",
+    "* [multiprocessing.Pool](https://docs.python.org/3/library/multiprocessing.html?highlight=pool#module-multiprocessing.pool) for creating a pool of asynchronous workers\n",
+    "* [joblib](https://joblib.readthedocs.io/en/latest/) for creating lightweight pipelines \n",
+    "\n",
+    "However, while all of them make it easier to exploit all the CPU cores on your machine, they don't provide distributed computing beyond the boundaries of your machine. Ray breaks that boundary.\n",
+    "\n",
+    "In fact, Ray also provides implementations of these APIs, so you are no longer limited to the boundaries of a single machine.\n",
+    "\n",
+    "We'll learn more about these implementations in [lesson 6](06-AdoptingRay.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Consider this image:\n",
     "![ML Landscape](../images/ML-Landscape.png)    "
    ]
@@ -67,24 +104,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More About Ray in the Python Ecosystem (TODO)\n",
+    "## For More Information\n",
     "\n",
-    "* Python GIL\n",
-    "* Comparison with asyncio, multiprocessing.Pool, joblib (and mention that Ray implements those, too)\n",
-    "* Mention existing users\n",
-    "\n",
-    "While Ray's integration with Python is most mature, a new Java API for Ray is under development and more languages are being considered."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ray's Future (TODO)\n",
-    "\n",
-    "* Support for Java (beta now?) and possible other languages\n",
-    "* More libraries\n",
-    "* More controls where needed (e.g., placement algorithms)"
+    "* [ray.io](https://ray.io): The Ray website. In particular:\n",
+    "    * [Documentation](https://ray.readthedocs.io/en/latest/): The full Ray documentation\n",
+    "    * [Blog](https://medium.com/distributed-computing-with-ray): The Ray blog\n",
+    "    * [GitHub](https://github.com/ray-project/ray): The source code for Ray\n",
+    "* [anyscale.com](https://anyscale.com/): The company developing Ray and these tutorials. In particular:\n",
+    "    * [Blog](https://anyscale.com/blog/): The Anyscale blog\n",
+    "    * [Events](https://anyscale.com/events/): Online events, [Ray Summit](http://raysummit.org), and meetups   \n",
+    "    * [Academy](https://anyscale.com/academy/): Training for Ray and Anyscale products    \n",
+    "    * [Jobs](https://jobs.lever.co/anyscale): Yes, we're hiring!\n",
+    "* Community:\n",
+    "    * [Ray Slack](ray-distributed.slack.com): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
+    "    * [ray-dev mailing list](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev)\n",
+    "    * [@raydistributed](https://twitter.com/raydistributed)\n",
+    "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
    ]
   },
   {
