--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -48,8 +48,7 @@
     "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
     "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
     "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Putting It Together](ray-core/05-PuttingItTogether.ipynb) | To cement our knowlege of Ray, this lesson is an extended exercise where you'll learn how to find performance bottlenecks in a Python application and fix them with Ray. |\n",
-    "| [06 Other Ray API Calls](ray-core/06-OtherRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. |"
+    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
    ]
   },
   {
